# auto-modeler-evolve

./: .gitignore  BACKLOG.md  CLAUDE.md  IDENTITY.md  JOURNAL.md  LEARNINGS.md  README.md  spec.md  vision.md
src/backend/: =0.23.0  coverage.json  db.py  main.py  performance_baseline.json  pyproject.toml  test_resilience.db-journal
src/backend/api/: analysis_templates.py  chat.py  data.py  deploy.py  features.py  models.py  projects.py  templates.py  validation.py
src/backend/chat/: narration.py  orchestrator.py  prompts.py
src/backend/core/: advisor.py  analyzer.py  anomaly.py  chart_builder.py  cleaner.py  computed.py  deployer.py  dictionary.py  explainer.py  feature_engine.py  filter_view.py  forecaster.py  merger.py  onboarding.py  query_engine.py  readiness.py  report_generator.py  retrain.py  scheduler.py  storyteller.py  trainer.py  tuner.py  validator.py  webhook.py
src/backend/models/: __init__.py  ab_test.py  analysis_template.py  batch_schedule.py  conversation.py  dashboard_field_config.py  dataset.py  dataset_filter.py  deployment.py  deployment_changelog.py  deployment_preset.py  deployment_version.py  feature_set.py  feedback_record.py  goal_seek_record.py  input_validation_rule.py  model_run.py  prediction_alert_rule.py  prediction_log.py  project.py  webhook_config.py  webhook_event.py
src/backend/tests/: conftest.py  debug_imbalance.py  test_ab_test_chat.py  test_ab_testing.py  test_accuracy_alert.py  test_aggregate_explanations.py  test_alert_rules.py  test_analysis_templates.py  test_anomaly.py  test_api_coverage_gaps.py  test_boxplot.py  (+176 more)
(+328 files in other folders)
